--- a/data/package.json
+++ b/data/package.json
@@ -8,7 +8,8 @@
     "videoId": "DdVvgfx-8mE",
     "icon": "../img/dory.jpg",
     "iframeurl": "https://www.youtube.com/embed/DdVvgfx-8mE?si=j78UvuQNDrIwgSno&autoplay=1",
-    "fullText":""
+    "fullText":"",
+    "subject": "동영상"
   },
   {
     "title": "드라마 속 재벌남과 억척녀가 계약연애할 때 클리셰 특징",
@@ -19,7 +20,8 @@
     "videoId": "c8GjsrBjUZU",
     "icon": "../img/umm.jpg",
     "iframeurl": "https://www.youtube.com/embed/c8GjsrBjUZU?si=zXYqb49LIvhFPNhF&autoplay=1",
-    "fullText":"결말포함 드라마 속 싸가지 재벌남과 억척녀가 계약연애할 때\n클리셰 특징 ㅋㅋ"
+    "fullText":"결말포함 드라마 속 싸가지 재벌남과 억척녀가 계약연애할 때\n클리셰 특징 ㅋㅋ",
+    "subject": "클리셰 시리즈"
   },
   {
     "title": "[#WSWF] 메가 크루 미션 글로벌 대중 평가 | BUMSUP(범접)",
@@ -30,7 +32,8 @@
     "videoId": "_xOnGP_Js1A",
     "icon": "../img/thechoom.jpg",
     "iframeurl": "https://www.youtube.com/embed/_xOnGP_Js1A?si=mESmBPxdWsBO1qs3&autoplay=1",
-    "fullText":"■ About MEGA CREW Mission Video\n\n-타이틀: 몽경(夢境) – 꿈의 경계에서\n-총괄 디렉터: 허니제이\n\n-작품 콘셉트\n한 소녀의 꿈속 여정을 중심으로 한국의 정서와 집단적 무의식을 퍼포먼스로 풀어냈으며 버드나무·바람·넝쿨 등 자연적 이미지를 춤으로 표현했다. 저승사자들이 삶과 죽음의 문지기로 등장, 소녀는 꿈에서 깨어나고 싶지만 그 꿈은 끝없이 변주되며 다시 그녀를 끌어들인다. 결국 이 꿈에서 벗어날 수 없는 존재는 바로 우리 자신일지도 모른다.\n\n-하이 앵글 구간 연출 의도\n갓의 안팎 검정과 흰색은 한국 고유의 음양 사상과 이중적 정체성을 상징. 반복적으로 뒤집히는 갓의 움직임은 ‘흐름’을 의미하며 빛과 어둠, 삶과 죽음, 과거와 미래가 공존하는 동적인 움직임을 담았다. 탈출을 갈망하지만 익숙한 혼돈 속을 맴도는 존재. 똬리처럼 얽힌 꿈에 갇힌 소녀의 모습은 곧 우리 자신의 자화상이다.\n\n-Title of Piece: Dream Realm - On the borders of the dream realm\n-Executive Director: Honey J\n\n-Concept of Piece\nCentering on a girl’s journey through a surreal dreamscape, Korean sentiment and the collective unconscious are brought to life as willow trees, the moon, wind, and vines are embodied through movement. Messengers of Death appear as gatekeepers between life and death. The girl yearns to awaken, yet the dream shifts endlessly, drawing her back in. The very parts of ourselves we wish to escape may be none other than ourselves.\n\n-Directorial Intent for High-angle Section\nThe image of the Gat flipping and the use of black and white serve as visual metaphors for Yin and Yang, and for duality. The flipping of the Gat symbolizes transition over separation, movement over stillness.\nShe longs to flee, yet drifts within the chaos—entangled once more, like a serpent coiling back into itself—perhaps a reflection of ourselves.\n\n-作品タイトル: 夢境　ー　夢の境界にて\n-チーフディレクター: ハニージェイ\n\n-作品コンセプト\n1人の少女が夢の中で辿る旅を中心に、韓国の情緒と集合的無意識をパフォーマンスとして描き出し、柳・風・蔓（つる）といった自然のイメージをダンスで具現化した。死神たちが生と死の門番として登場し、少女は夢から目覚めたいが、その夢は絶えず形を変え、彼女を再び引き込んでいく。結局この夢から逃れられない存在は私たち自身なのかもしれない。\n\n-ハイアングル演出意図 \n「カッ」の内と外、黒と白は、韓国固有の陰陽思想と二重のアイデンティティを象徴する。繰り返し裏返されるカッの動きは「流動」を意味し、光と影、生と死、過去と未来が共存する動的な動きを表現している。出口を求めながらも、なじみ深い混沌の中をさまよう存在。とぐろのように絡んだ夢に囚われた少女の姿は、私たち自身の自画像だ。\n"
+    "fullText":"■ About MEGA CREW Mission Video\n\n-타이틀: 몽경(夢境) – 꿈의 경계에서\n-총괄 디렉터: 허니제이\n\n-작품 콘셉트\n한 소녀의 꿈속 여정을 중심으로 한국의 정서와 집단적 무의식을 퍼포먼스로 풀어냈으며 버드나무·바람·넝쿨 등 자연적 이미지를 춤으로 표현했다. 저승사자들이 삶과 죽음의 문지기로 등장, 소녀는 꿈에서 깨어나고 싶지만 그 꿈은 끝없이 변주되며 다시 그녀를 끌어들인다. 결국 이 꿈에서 벗어날 수 없는 존재는 바로 우리 자신일지도 모른다.\n\n-하이 앵글 구간 연출 의도\n갓의 안팎 검정과 흰색은 한국 고유의 음양 사상과 이중적 정체성을 상징. 반복적으로 뒤집히는 갓의 움직임은 ‘흐름’을 의미하며 빛과 어둠, 삶과 죽음, 과거와 미래가 공존하는 동적인 움직임을 담았다. 탈출을 갈망하지만 익숙한 혼돈 속을 맴도는 존재. 똬리처럼 얽힌 꿈에 갇힌 소녀의 모습은 곧 우리 자신의 자화상이다.\n\n-Title of Piece: Dream Realm - On the borders of the dream realm\n-Executive Director: Honey J\n\n-Concept of Piece\nCentering on a girl’s journey through a surreal dreamscape, Korean sentiment and the collective unconscious are brought to life as willow trees, the moon, wind, and vines are embodied through movement. Messengers of Death appear as gatekeepers between life and death. The girl yearns to awaken, yet the dream shifts endlessly, drawing her back in. The very parts of ourselves we wish to escape may be none other than ourselves.\n\n-Directorial Intent for High-angle Section\nThe image of the Gat flipping and the use of black and white serve as visual metaphors for Yin and Yang, and for duality. The flipping of the Gat symbolizes transition over separation, movement over stillness.\nShe longs to flee, yet drifts within the chaos—entangled once more, like a serpent coiling back into itself—perhaps a reflection of ourselves.\n\n-作品タイトル: 夢境　ー　夢の境界にて\n-チーフディレクター: ハニージェイ\n\n-作品コンセプト\n1人の少女が夢の中で辿る旅を中心に、韓国の情緒と集合的無意識をパフォーマンスとして描き出し、柳・風・蔓（つる）といった自然のイメージをダンスで具現化した。死神たちが生と死の門番として登場し、少女は夢から目覚めたいが、その夢は絶えず形を変え、彼女を再び引き込んでいく。結局この夢から逃れられない存在は私たち自身なのかもしれない。\n\n-ハイアングル演出意図 \n「カッ」の内と外、黒と白は、韓国固有の陰陽思想と二重のアイデンティティを象徴する。繰り返し裏返されるカッの動きは「流動」を意味し、光と影、生と死、過去と未来が共存する動的な動きを表現している。出口を求めながらも、なじみ深い混沌の中をさまよう存在。とぐろのように絡んだ夢に囚われた少女の姿は、私たち自身の自画像だ。\n",
+    "subject": "WSWF"
   },
   {
     "title": "GOLDEN Covered by IVE ANYUJIN",
@@ -41,7 +44,8 @@
     "videoId": "AuaABDWFs_8",
     "icon": "../img/ive.jpg",
     "iframeurl": "https://www.youtube.com/embed/AuaABDWFs_8?si=xfmjnYyJaNq9WuW4&autoplay=1",
-    "fullText": "STARSHIP SQUARE (Domestic) : https://bit.ly/3HtQ7GF\nSTARSHIP SQUARE (Global) : https://bit.ly/4i5Dl1g\nIVE US EXCLUSIVE STORE : https://shop.ive-starship.com/  \n\nIVE X (Twitter)\n:   / ivestarship  \n:   / ive_twt  \n:   / ivestarship_jp  \nIVE Instagram :   / ivestarship  \nIVE Facebook: https://fb.me/IVEstarship \nIVE Fancafe: https://cafe.daum.net/IVEstarship\nIVE TikTok:   / ive.official  \nIVE Weibo: https://weibo.com/ivestarship"
+    "fullText": "STARSHIP SQUARE (Domestic) : https://bit.ly/3HtQ7GF\nSTARSHIP SQUARE (Global) : https://bit.ly/4i5Dl1g\nIVE US EXCLUSIVE STORE : https://shop.ive-starship.com/  \n\nIVE X (Twitter)\n:   / ivestarship  \n:   / ive_twt  \n:   / ivestarship_jp  \nIVE Instagram :   / ivestarship  \nIVE Facebook: https://fb.me/IVEstarship \nIVE Fancafe: https://cafe.daum.net/IVEstarship\nIVE TikTok:   / ive.official  \nIVE Weibo: https://weibo.com/ivestarship",
+    "subject": "DIVE INTO IVE"
   },
   {
     "title": "행복해요",
@@ -52,7 +56,8 @@
     "videoId": "ruAa6lkEZhg",
     "icon": "../img/deep.jpg",
     "iframeurl": "https://www.youtube.com/embed/ruAa6lkEZhg?si=_st9FZ8ZKlRXOBOv&autoplay=1",
-    "fullText": "갓생"
+    "fullText": "갓생",
+    "subject": "동영상"
   },
   {
     "title": "응 너 127년 꼬우면 항소해",
@@ -63,7 +68,8 @@
     "videoId": "HaYNqWBaanI",
     "icon": "../img/nerdult.jpg",
     "iframeurl": "https://www.youtube.com/embed/HaYNqWBaanI?si=uev7xir56TqD2RXv&autoplay=1",
-    "fullText": "대한민국의 낮은 형량을 깨부수러 온 악마판사와 그의 팀, 그리고 말도 안 되는 재판에 휘말린 피고인들… 대한민국에서 볼 수 없는 판사가 직접 선보이는 극한의 처벌기\n\n\n연출 | 유현규\n각본 | 유현규\n촬영 | 김성훈 박주명\n조명 | 전상협 유현규\n녹음 | 김성훈\n미술 | 임재형 박주명\n조감독 | 박주명\n편집 | 너덜트\n색보정 | 유현규\n믹싱 | 전상협"
+    "fullText": "대한민국의 낮은 형량을 깨부수러 온 악마판사와 그의 팀, 그리고 말도 안 되는 재판에 휘말린 피고인들… 대한민국에서 볼 수 없는 판사가 직접 선보이는 극한의 처벌기\n\n\n연출 | 유현규\n각본 | 유현규\n촬영 | 김성훈 박주명\n조명 | 전상협 유현규\n녹음 | 김성훈\n미술 | 임재형 박주명\n조감독 | 박주명\n편집 | 너덜트\n색보정 | 유현규\n믹싱 | 전상협",
+    "subject": "동영상"
   },
   {
     "title": "[4K] 고추잠자리 - 작은 봄 Official M/V",
@@ -74,7 +80,8 @@
     "videoId": "HIeZ8W0zLMA",
     "icon": "../img/beautifulnerd.jpg",
     "iframeurl": "https://www.youtube.com/embed/HIeZ8W0zLMA?si=pCYx8GR1GXOfTK2q&autoplay=1",
-    "fullText": "MV Directed by Kwon Meen\nAssistant Director & Producer Jang Yejin\n\nDOP \nKim Jeehoo\n\nAssistant Camera\nMOGEOSU\n\nDesign\nLee Jungmin\n\nArtist Manger\nChoi Wooseong\nYang Namsu\nKim Kibeom\n\nDocumentary team\nMOGEOSU\n\nHair & Make up\nAreum\n竹内 未夢\n\nSpecial Thanks to\nParkryeok\n\nMUSIC CREDIT\n\nLyrics by Choi Jaewoo, Gist, HOON, GORAE\nComposed by TOIL, Pateko, HAAN, Gist, HOON\nArranged by TOIL, Pateko, HAAN\n\nPiano Lee Myungho\nBass Park Chanmin\nString Lim Woobin\nGuitar Choi Yeonghun\nDrum Lee Myungho, TOIL\nPercussion HAAN"
+    "fullText": "MV Directed by Kwon Meen\nAssistant Director & Producer Jang Yejin\n\nDOP \nKim Jeehoo\n\nAssistant Camera\nMOGEOSU\n\nDesign\nLee Jungmin\n\nArtist Manger\nChoi Wooseong\nYang Namsu\nKim Kibeom\n\nDocumentary team\nMOGEOSU\n\nHair & Make up\nAreum\n竹内 未夢\n\nSpecial Thanks to\nParkryeok\n\nMUSIC CREDIT\n\nLyrics by Choi Jaewoo, Gist, HOON, GORAE\nComposed by TOIL, Pateko, HAAN, Gist, HOON\nArranged by TOIL, Pateko, HAAN\n\nPiano Lee Myungho\nBass Park Chanmin\nString Lim Woobin\nGuitar Choi Yeonghun\nDrum Lee Myungho, TOIL\nPercussion HAAN",
+    "subject": "나의 졸업앨범"
   },
   {
     "title": "[4K] 고추잠자리 - 너라는 별 Official M/V",
@@ -85,7 +92,8 @@
     "videoId": "j2LZmDCCpKY",
     "icon": "../img/beautifulnerd.jpg",
     "iframeurl": "https://www.youtube.com/embed/j2LZmDCCpKY?si=OSXh488obrkR1xd8&autoplay=1",
-    "fullText": "[Credit]\n\nLyrics by 최제우, urban fisher, 김다민, 김승기\nComposed by TOIL, gist, pateko, 최제우 \nArranged by TOIL\n\nGuitar by 최영훈, 이신우\nBass by 정승현\nDrum by TOIL\nPercussion by TOIL\n\n\nMix by 전찬민(@mat.kor, allday4real)\nMastered by 권남우(@821sound)\n\n\nChief Director BEAUTIFUL NERD\nDirected by 권민, 장예진 (@kwonmeeen, @markashtoob)\nDOP 김지후(@jeehoowism)\nBCAM 왕현민(@hyuuuun._.m)\n\n\n[ANIMATOR Credit]\n\nDirecting/Conti by 심땅 (https://x.com/ddang_sim)\nColor Design by 파랑상자 (https://x.com/bluebox00208/media)\nAnimation by 장석민 (https://x.com/jangseokmin999 ), 파랑상자, 심땅"
+    "fullText": "[Credit]\n\nLyrics by 최제우, urban fisher, 김다민, 김승기\nComposed by TOIL, gist, pateko, 최제우 \nArranged by TOIL\n\nGuitar by 최영훈, 이신우\nBass by 정승현\nDrum by TOIL\nPercussion by TOIL\n\n\nMix by 전찬민(@mat.kor, allday4real)\nMastered by 권남우(@821sound)\n\n\nChief Director BEAUTIFUL NERD\nDirected by 권민, 장예진 (@kwonmeeen, @markashtoob)\nDOP 김지후(@jeehoowism)\nBCAM 왕현민(@hyuuuun._.m)\n\n\n[ANIMATOR Credit]\n\nDirecting/Conti by 심땅 (https://x.com/ddang_sim)\nColor Design by 파랑상자 (https://x.com/bluebox00208/media)\nAnimation by 장석민 (https://x.com/jangseokmin999 ), 파랑상자, 심땅",
+    "subject": "나의 졸업앨범"
   },
   {
     "title": "아 해보세요",
@@ -96,6 +104,55 @@
     "videoId": "qBwAtBq93iY",
     "icon": "../img/shortbox.jpg",
     "iframeurl": "https://www.youtube.com/embed/qBwAtBq93iY?si=fjD63nW3SOs-aGHU&autoplay=1",
-    "fullText": "의원, 약국에서도 서류 없이 간편한 실손보험금 청구!\n실손24, 안 깔면 손해!"
+    "fullText": "의원, 약국에서도 서류 없이 간편한 실손보험금 청구!\n실손24, 안 깔면 손해!",
+    "subject": "동영상"
+  },
+  {
+    "title": "신입사원이 사수를 잘못 만나면 벌어지는 일 - [MZ를 찾아서 : 인디그라운드]",
+    "uploader": "뷰티풀너드",
+    "subscriberCount": "구독자 135만명",
+    "views": "512,244회",
+    "uploadDate": "2025. 8. 3.",
+    "videoId": "biHTGm7Nlik",
+    "icon": "../img/beautifulnerd.jpg",
+    "iframeurl": "https://www.youtube.com/embed/biHTGm7Nlik?si=ykyoTAqzQRdJfztM&autoplay=1",
+    "fullText": "최제우 (이시온) 인스타 \uD83D\uDC49   / cjaewoo_97  \n전경민 (오훈) 인스타 \uD83D\uDC49   / gangmintical  \n김승기 인스타 \uD83D\uDC49  / onlychildkim  \n정희수 인스타 \uD83D\uDC49   / 1nesus  ",
+    "subject": "MZ를 찾아서"
+  },
+  {
+    "title": "인디밴드가 사실상 해체되는 과정 - [MZ를 찾아서 : 인디그라운드]",
+    "uploader": "뷰티풀너드",
+    "subscriberCount": "구독자 135만명",
+    "views": "750,208회",
+    "uploadDate": "2025. 7. 27.",
+    "videoId": "SHBx66En4Ac",
+    "icon": "../img/beautifulnerd.jpg",
+    "iframeurl": "https://www.youtube.com/embed/SHBx66En4Ac?si=sQ0TzICPGGbcJsvP&autoplay=1",
+    "fullText": "최제우 (이시온) 인스타 \uD83D\uDC49   / cjaewoo_97  \n전경민 (오훈) 인스타 \uD83D\uDC49   / gangmintical  \n김승기 인스타 \uD83D\uDC49  / onlychildkim  \n정희수 인스타 \uD83D\uDC49   / 1nesus  ",
+    "subject": "MZ를 찾아서"
+  },
+  {
+    "title": "그 시절 우리는 짝꿍을 어떻게 정했을까? - [나의 졸업앨범]",
+    "uploader": "뷰티풀너드",
+    "subscriberCount": "구독자 135만명",
+    "views": "1,058,217회",
+    "uploadDate": "2024. 8. 25.",
+    "videoId": "855WFC4whhQ",
+    "icon": "../img/beautifulnerd.jpg",
+    "iframeurl": "https://www.youtube.com/embed/855WFC4whhQ?si=QK7XSu0EdoxilYT-&autoplay=1",
+    "fullText": "감독 - 최제우\n\n[극본]\n최제우\n김다민\n김승기\n\n[배우]\n최제우(이시온) \uD83D\uDC49   / cjaewoo_97  \n전경민(오훈) \uD83D\uDC49   / gangmintical  \n정재형(정광용) \uD83D\uDC49   / hell773h  \n이수빈 \uD83D\uDC49   / ddobini619  \n조현덕 \uD83D\uDC49   / duxk_e  \n신일국 \uD83D\uDC49   / 1.guk  \n\n[PD]\n김영환\n오승현\n\n[촬영]\n김영환(카메라)\n김지후(카메라)\n오승현(카메라)\n김동현(카메라)\n안상준(카메라)\n김승기(조연출)\n\n[나레이션]\n최제우(이시온)\n\n[음향]\n오승현(동시녹음)\n\n[음악]\n시네루(SINERU)\nBlessed.\n고래(GORAE)\n\n[메이크업]\n에이슬 \uD83D\uDC49   / asle_loves.u  ",
+    "subject": "나의 졸업앨범"
+  },
+  {
+    "title": "나... 나랑 수행평가 같이 할래...? - [나의 졸업앨범]",
+    "uploader": "뷰티풀너드",
+    "subscriberCount": "구독자 135만명",
+    "views": "1,069,229회",
+    "uploadDate": "2024. 9. 22.",
+    "videoId": "7Ct6PR8IJqE",
+    "icon": "../img/beautifulnerd.jpg",
+    "iframeurl": "https://www.youtube.com/embed/7Ct6PR8IJqE?si=D3DjVBinV5ZvjRs-&autoplay=1",
+    "fullText": "최제우 (이시온) 인스타 \uD83D\uDC49   / cjaewoo_97  \n전경민 (오훈) 인스타 \uD83D\uDC49   / gangmintical  \n김승기 인스타 \uD83D\uDC49  / onlychildkim  \n정희수 인스타 \uD83D\uDC49   / 1nesus  ",
+    "subject": "나의 졸업앨범"
   }
 ]
